--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
       <!-- Open Graph / Facebook -->
       <meta property="og:type" content="website">
       <meta property="og:url" content="https://metaforica.com/">
-      <meta property="og:title" content="Metafórica - Podcast y Escritos sobre la Condición Humana">
-      <meta property="og:description" content="Explora la condición humana a través de historias, reflexiones y conversaciones profundas.">
-      <meta property="og:image" content="/og-image.jpg">
+      <meta property="og:title" content="Metafórica - Libera tu juicio, encuentra tu paz">
+      <meta property="og:description" content="Conceptos traídos a conversaciones cotidianas para aprender cómo liberarnos del auto juicio. Podcast, escritos y reflexiones por Alexandra.">
+      <meta property="og:image" content="https://metaforica.com/api/og">
+      <meta property="og:image:width" content="1200">
+      <meta property="og:image:height" content="630">
       <meta property="og:site_name" content="Metafórica">
       <meta property="og:locale" content="es_ES">
       
       <!-- Twitter -->
       <meta property="twitter:card" content="summary_large_image">
       <meta property="twitter:url" content="https://metaforica.com/">
-      <meta property="twitter:title" content="Metafórica - Podcast y Escritos">
-      <meta property="twitter:description" content="Explora la condición humana a través de historias, reflexiones y conversaciones profundas.">
-      <meta property="twitter:image" content="/og-image.jpg">
+      <meta property="twitter:title" content="Metafórica - Libera tu juicio, encuentra tu paz">
+      <meta property="twitter:description" content="Conceptos traídos a conversaciones cotidianas para aprender cómo liberarnos del auto juicio.">
+      <meta property="twitter:image" content="https://metaforica.com/api/og">
       
       <!-- Favicon -->
       <link rel="icon" type="image/svg+xml" href="/favicon.svg">
