--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
       
       <!-- Canonical URL -->
       <link rel="canonical" href="https://soymetaforica.com/">
+      
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-LFQ0BL4777"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-LFQ0BL4777', {
+          anonymize_ip: true,
+          send_page_view: true
+        });
+      </script>
     </head>
 
     <body>
