--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       
       <!-- Favicon -->
       <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+      <link rel="apple-touch-icon" href="/logo.svg">
       
       <!-- Theme Color -->
       <meta name="theme-color" content="#fdd91f">
