Update favicon to new Metaforica design
- Replace SVG favicon with PNG version from design assets
- Update apple-touch-icon to match
- Update index.html favicon references

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <meta name="twitter:image" content="https://fdfchoshzouwguvxfnuv.supabase.co/storage/v1/object/public/site-assets/hero-image.png">
       
       <!-- Favicon -->
-      <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-      <link rel="apple-touch-icon" href="/logo.svg">
+      <link rel="icon" type="image/png" href="/favicon.png">
+      <link rel="apple-touch-icon" href="/apple-touch-icon.png">
       
       <!-- Theme Color -->
       <meta name="theme-color" content="#fdd91f">
