feat: add DoneWell health adapter endpoints
- Add /api/health main health endpoint
- Add /api/health/cms CMS connectivity check
- Add /api/health/form-test form validation test
- Add /api/health/log error logging endpoint
- Add /api/health/deploy deploy webhook handler
- Update vercel.json with rewrites and cache headers
- Add DoneWell meta tags to index.html

CMS table: podcast_episodes
Forms table: contact_submissions
Site ID: soy_prod_001

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       <!-- Sitemap -->
       <link rel="sitemap" type="application/xml" href="/sitemap.xml">
       
+      <!-- DoneWell Monitoring -->
+      <meta name="donewell:site_id" content="soy_prod_001" />
+      <meta name="donewell:environment" content="production" />
+      
       <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-LFQ0BL4777"></script>
       <script>
